src/components/Footer.css
/* FOOTER */
.footer {
  background: #121316; /* gray-900 */
  color: white;
  padding: 3rem 0;
}

/* CONTAINER */
.footer-container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1rem;
}

/* GRID */
.footer-grid {
  display: grid;
  gap: 2rem;
  margin-bottom: 2rem;

  display: flex;
  justify-content: space-between;
  
}

@media (min-width: 768px) {
  .footer-grid {
    grid-template-columns: repeat(3, 1fr);
  }
}

/* TITLES */
.footer-title {
  margin-bottom: 1rem;
  color: white;
}

/* CONTACT INFO */
.footer-contact-list {
  display: flex;
  flex-direction: column;
  gap: 1em;
  flex-direction: row;
  gap: 2em;
}

.footer-contact-item {
  display: flex;
  gap: 0.75rem;
  align-items: flex-start;
  margin: 0;
  padding: 0;
}

.footer-icon {
  display: inline-block;
  width: 20px;
  height: 20px;
}

.footer-text {
  color: #d1d5db; /* gray-300 */
  margin: 0;
  padding: 0;
}

/* EVENT INFO LIST */
.footer-list {
  list-style: none;
  padding: 0;
  margin: 0;
  color: #d1d5db;
}

.footer-list li {
  margin-bottom: 0.5rem;
}

/* SOCIAL */
.footer-social {
  display: flex;
  gap: 1rem;
  margin-bottom: 1.5rem;
}

.footer-social-btn {
  width: 40px;
  height: 40px;
  background: #1f2937; /* gray-800 */
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: 0.2s ease;
}
.footer-social-btn{
  color: white;
}
.footer-social-btn.linkedin:hover {
  background: #2563eb; /* blue-600 */
}
.footer-social-btn.twitter:hover {
  background: #60a5fa; /* blue-400 */
}
.footer-social-btn.facebook:hover {
  background: #0760F2; /* blue-600 */
}
.footer-social-btn.instagram:hover {
  background: linear-gradient(to right,#833ab4,#fd1d1d,#fcb045);
}
.footer-social-btn.youtube:hover {
  background: #FF0033; /* blue-400 */
}

.footer-social-icon {
  width: 20px;
  height: 20px;
}

/* DESC */
.footer-desc {
  color: #9ca3af; /* gray-400 */
  font-size: 0.875rem;
}

/* BOTTOM */
.footer-bottom {
  border-top: 1px solid #6b6b6b; /* gray-800 */
  padding-top: 2rem;
  text-align: center;
  color: #a3a3a3;
  font-size: 0.875rem;
}

